testsuite/tests/polykinds/T7278.stderr

T7278.hs:8:43: error:
    ‘t’ is applied to too many type arguments
    In the type signature:
      f :: (C (t :: k) (TF t)) => TF t p1 p0 -> t p1 p0
